--- a/src/less/core/32.filters-subsubsub.less
+++ b/src/less/core/32.filters-subsubsub.less
@@ -1,9 +1,4 @@
-/**
- * Copyright 2016 Achraf Chouk
- * Achraf Chouk (https://github.com/crewstyle)
- *
- * 16.filters-subsubsub.less
- */
+/*! 32.filters-subsubsub */
 
 .subsubsub {
     margin-bottom: 8px;
