--- a/src/less/core/42.meta.publish.less
+++ b/src/less/core/42.meta.publish.less
@@ -1,13 +1,7 @@
-/**
- * Copyright 2016 Achraf Chouk
- * Achraf Chouk (https://github.com/crewstyle)
- *
- * 22.meta.publish.less
- */
+/*! 42.meta.publish */
 
-/**
- * Main block
- */
+// Main block
+
 #minor-publishing-actions {
     text-align: center;
 }
@@ -25,11 +19,10 @@
     font-weight: 700;
 }
 
-/**
- * Second block
- */
+// Second block
+
 #major-publishing-actions {
-    background-color: @white;
+    background-color: @whitecolor;
     padding: 10px 0;
     position: relative;
 }
