--- a/src/less/core/43.meta.tag.less
+++ b/src/less/core/43.meta.tag.less
@@ -1,16 +1,11 @@
-/**
- * Copyright 2016 Achraf Chouk
- * Achraf Chouk (https://github.com/crewstyle)
- *
- * 23.meta.tag.less
- */
+/*! 43.meta.tag */
 
 .tagsdiv .newtag {
     width: 145px;
 }
 
 #link-post_tag {
-    color: @graymedium;
+    color: lighten(@blackcolor, 40%);
     font-size: 12px;
     text-decoration: none;
 
