--- a/src/less/core/50.post.less
+++ b/src/less/core/50.post.less
@@ -1,16 +1,11 @@
-/**
- * Copyright 2016 Achraf Chouk
- * Achraf Chouk (https://github.com/crewstyle)
- *
- * 30.post.less
- */
+/*! 50.post */
 
 #poststuff #titlewrap {
     margin-top: -2px;
 }
 
 #titlediv #title {
-    border-color: @skelsilver;
+    border-color: @bodycolor;
     border-width: 0 0 1px;
     box-shadow: none;
     font-size: 30px;
@@ -31,7 +26,7 @@
     width: 260px;
 }
 #post-body #side-sortables > div:before {
-    background-color: @skelsilver;
+    background-color: @bodycolor;
     bottom: -40px;
     content: "";
     display: block;
@@ -40,15 +35,6 @@
     top: 0;
     width: 1px;
 }
-
-/*.wp-editor-expand #wp-content-editor-container {
-    border: none;
-}
-
-.wp-editor-expand div.mce-toolbar-grp {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-}*/
 
 #wp-content-wrap {
     overflow: hidden;
