--- a/src/less/core/70.widget.less
+++ b/src/less/core/70.widget.less
@@ -1,9 +1,4 @@
-/**
- * Copyright 2016 Achraf Chouk
- * Achraf Chouk (https://github.com/crewstyle)
- *
- * 40.widget.less
- */
+/*! 70.widget */
 
 .widget-control-actions {
     padding-top: 15px;
