--- a/src/less/login.less
+++ b/src/less/login.less
@@ -6,8 +6,8 @@
  */
 
 html {
-    background-color: transparent;
-    background-image: url(../img/artemis-login.jpg);
+    background-color: @loginbackgroundcolor;
+    background-image: @loginbackgroundimage;
     background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: cover;
