--- a/src/less/core/30.tables.less
+++ b/src/less/core/30.tables.less
@@ -1,13 +1,7 @@
-/**
- * Copyright 2016 Achraf Chouk
- * Achraf Chouk (https://github.com/crewstyle)
- *
- * 15.tables.less
- */
+/*! 30.tables */
 
-/**
- * Global
- */
+// Global
+
 .widefat td,
 .widefat td p,
 .widefat td ol,
@@ -15,12 +9,11 @@
     font-size: 11px;
 }
 
-/**
- * Default table
- */
+// Default table
+
 .form-table {
     tr:nth-child(odd) {
-        background-color: fade(@black, 1.5%);
+        background-color: fade(@blackcolor, 1.5%);
     }
 
     th {
@@ -40,12 +33,11 @@ table.fixed {
 .striped > tbody > :nth-child(odd),
 ul.striped > :nth-child(odd),
 .alternate {
-    background-color: fade(@graydarker, 1.5%);
+    background-color: fade(lighten(@blackcolor, 10%), 1.5%);
 }
 
-/**
- * Action toolbox
- */
+// Action toolbox
+
 .row-actions {
     padding-top: 4px;
     text-transform: uppercase;
@@ -55,61 +47,58 @@ ul.striped > :nth-child(odd),
         font-size: 0;
         margin: 0 10px 0 0;
 
-        a {
+        a, button {
             font-size: 10px;
+            text-transform: uppercase;
         }
     }
 }
 
-/**
- * Unapprouved
- */
+// Unapprouved
+
 #the-comment-list .unapproved th.check-column {
-    border-left: 4px solid @red;
+    border-left: 4px solid @errorcolor;
 }
 #the-comment-list .unapproved th, #the-comment-list .unapproved td {
-    background-color: fade(@red, 5%);
+    background-color: fade(@errorcolor, 5%);
 }
 
-/**
- * Active
- */
+// Active
+
 .plugins .active th.check-column, .plugin-update-tr.active td {
-    border-left: 4px solid @blue;
+    border-left: 4px solid @infocolor;
 }
 .plugins .active td, .plugins .active th {
-    background-color: fade(@blue, 5%);
+    background-color: fade(@infocolor, 5%);
 }
 .plugins .active.update th.check-column, .plugins .active.update+.plugin-update-tr .plugin-update {
-    border-left: 4px solid @red;
+    border-left: 4px solid @errorcolor;
 }
 .plugins .active.update td, .plugins .active.update th, tr.active.update+tr.plugin-update-tr .plugin-update, tr.active+tr.plugin-update-tr:not(.updated) .plugin-update .update-message {
-    background-color: fade(@red, 5%);
+    background-color: fade(@errorcolor, 5%);
 }
 .plugin-card .install-now:before, .plugin-card .update-now:before, .plugin-update-tr .update-message:before {
-    color: @red;
+    color: @errorcolor;
 }
 .plugin-update-tr .update-message {
     line-height: 20px;
 
     &.updated-message {
-        background-color: fade(@blue, 15%);
+        background-color: fade(@infocolor, 15%);
     }
 }
 .plugin-card .install-now:before, .plugin-card .update-now:before, .plugin-update-tr.updated .update-message.updated-message:before {
-    color: @green;
+    color: @successcolor;
 }
 
-/**
- * Post comment awaiting
- */
+// Post comment awaiting
+
 .column-response .post-com-count-pending, .column-comments .post-com-count-pending {
-    background-color: @red;
+    background-color: @errorcolor;
 }
 
-/**
- * Extension to update
- */
+// Extension to update
+
 .plugin-update-tr .update-message:before, .plugin-card .update-now:before, .plugin-card .install-now:before {
-    color: @red;
+    color: @errorcolor;
 }
