--- a/src/less/core/44.meta.category.less
+++ b/src/less/core/44.meta.category.less
@@ -1,12 +1,7 @@
-/**
- * Copyright 2016 Achraf Chouk
- * Achraf Chouk (https://github.com/crewstyle)
- *
- * 24.meta.category.less
- */
+/*! 44.meta.category */
 
 #side-sortables .add-menu-item-tabs a, .category-tabs a, .wp-tab-bar a {
-    color: @skelsilver;
+    color: @bodycolor;
     outline: none;
 
     &:focus {
@@ -17,20 +12,19 @@
 }
 
 .categorydiv div.tabs-panel, .customlinkdiv div.tabs-panel, .posttypediv div.tabs-panel, .taxonomydiv div.tabs-panel, .wp-tab-panel {
-    background-color: @white;
+    background-color: @whitecolor;
     border: 0;
     padding: 0;
 }
 
-/**
- * Active
- */
+// Active
+
 .wp-tab-active, ul.add-menu-item-tabs li.tabs, ul.category-tabs li.tabs {
-    background-color: @white;
+    background-color: @whitecolor;
     border: 0;
 }
 #post-body ul.add-menu-item-tabs li.tabs a, #post-body ul.category-tabs li.tabs a, #side-sortables .add-menu-item-tabs .tabs a, #side-sortables .category-tabs .tabs a, .wp-tab-bar .wp-tab-active a {
-    color: @skelblack;
+    color: @sidebarhoverbackgroundcolor;
     font-weight: 700;
     outline: none;
 
@@ -41,11 +35,10 @@
     }
 }
 
-/**
- * Add new
- */
+// Add new
+
 .taxonomy-add-new {
-    color: @graymedium;
+    color: lighten(@blackcolor, 40%);
     font-size: 12px;
     margin: 20px 0 10px;
     text-decoration: none;
