--- a/src/less/login/01.global.less
+++ b/src/less/login/01.global.less
@@ -1,9 +1,22 @@
-/**
+/*!
+ * Login component
+ *
  * Copyright 2016 Achraf Chouk
  * Achraf Chouk (https://github.com/crewstyle)
- *
- * 01.global.less
  */
+
+/**
+ * 01.global
+ */
+
+html {
+    background-color: @loginbackgroundcolor;
+    background-image: @loginbackgroundimage;
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 480px;
+}
 
 body.login {
     background-color: transparent;
@@ -23,7 +36,7 @@ body.login {
 
             a {
                 background: none;
-                color: @white;
+                color: @whitecolor;
                 height: auto;
                 margin: 0;
                 padding: 0;
