--- a/src/less/login/02.form.less
+++ b/src/less/login/02.form.less
@@ -20,7 +20,7 @@ body.login div#login form {
     box-shadow: none;
 
     label {
-        color: @white;
+        color: @whitecolor;
         display: block;
         font-size: 14px;
         height: 45px;
@@ -55,11 +55,11 @@ body.login div#login form {
     }
 
     .input {
-        background: @white;
+        background: @whitecolor;
         border: none;
         border-radius: 0;
         bottom: 0;
-        color: @black;
+        color: @blackcolor;
         font-size: 16px;
         height: 45px;
         left: 0;
@@ -78,10 +78,11 @@ body.login div#login form {
     p.submit {
         padding: 30px 0 0;
 
-        input#wp-submit {
-            background-color: @loginbutton;
+        /*input#wp-submit {
+            background-color: @buttonprimarybackgroundcolor;
             border-radius: 20px;
             border-width: 0;
+            color: @buttonprimarycolor;
             float: none;
             font-size: 14px;
             height: auto;
@@ -95,15 +96,15 @@ body.login div#login form {
             -webkit-box-shadow: none;
             -moz-box-shadow: none;
             box-shadow: none;
-        }
+        }*/
     }
 }
 
 body.login div#login form input[type=text]:-webkit-autofill {
-    box-shadow: 0 0 0 100px @white inset, 0 0 0 100px @white inset, 0 0 0 100px @white inset, 0 0 0 100px @white inset;
-    -webkit-text-fill-color: @black !important;
+    box-shadow: 0 0 0 100px @whitecolor inset, 0 0 0 100px @whitecolor inset, 0 0 0 100px @whitecolor inset, 0 0 0 100px @whitecolor inset;
+    -webkit-text-fill-color: @blackcolor !important;
 }
 body.login div#login form input[type=password]:-webkit-autofill {
-    box-shadow: 0 0 0 100px @white inset, 0 0 0 100px @white inset, 0 0 0 100px @white inset, 0 0 0 100px @white inset;
-    -webkit-text-fill-color: @black !important;
+    box-shadow: 0 0 0 100px @whitecolor inset, 0 0 0 100px @whitecolor inset, 0 0 0 100px @whitecolor inset, 0 0 0 100px @whitecolor inset;
+    -webkit-text-fill-color: @blackcolor !important;
 }
