--- a/src/less/login/04.navs.less
+++ b/src/less/login/04.navs.less
@@ -7,7 +7,7 @@
 
 body.login div#login {
     p#nav {
-        color: @white;
+        color: @whitecolor;
         margin: 0;
         padding: 10px 0 0;
         text-align: center;
@@ -23,12 +23,12 @@ body.login div#login {
 
     p#nav a,
     p#backtoblog a {
-        color: @white;
+        color: @whitecolor;
         text-decoration: none;
         text-shadow: none;
 
         &:hover {
-            color: @graymedium;
+            color: darken(@blackcolor, 40%);
         }
     }
 }
