--- a/src/less/core/14.adminmenu.separator.less
+++ b/src/less/core/14.adminmenu.separator.less
@@ -1,15 +1,15 @@
-/*! 12.admin.menu.separator */
+/*! 14.adminmenu.separator */
 
 // separator
 
-#adminmenu {
+ul#adminmenu {
     li.wp-menu-separator {
         margin: 4px 0;
         padding: 0 10px;
     }
 
     div.separator {
-        background-color: darken(@adminbarbackgroundcolor, 10%);
+        background-color: darken(@sidebarbackgroundcolor, 10%);
         height: 1px;
     }
 }
