--- a/src/less/core/50.post.less
+++ b/src/less/core/50.post.less
@@ -1,41 +1,58 @@
 /*! 50.post */
 
-#poststuff #titlewrap {
-    margin-top: -2px;
+// category and tag list
+
+.wp-tab-panel,
+.categorydiv div.tabs-panel,
+.customlinkdiv div.tabs-panel,
+.posttypediv div.tabs-panel,
+.taxonomydiv div.tabs-panel {
+    background-color: fade(@boxbackgroundcolor, 50%);
+    border: @boxborder;
 }
 
-#titlediv #title {
-    border-color: @bodycolor;
-    border-width: 0 0 1px;
-    box-shadow: none;
-    font-size: 30px;
-    padding: 0 10px;
+// WYSIWYG
+
+.quicktags-toolbar {
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
 }
 
-#edit-slug-box {
-    strong {
-        font-weight: 200;
+// Guttenberg
+
+.components-panel__header.edit-post-sidebar__panel-tabs ul {
+    margin-top: 0;
+
+    .edit-post-sidebar__panel-tab.is-active {
+        box-shadow: inset 0 -3px @defaultbordercolor;
     }
 }
 
-#post-body.columns-2 #postbox-container-1 {
-    margin-top: 10px;
+.block-editor-block-list__insertion-point-indicator {
+    background-color: @primarycolor;
 }
 
-#post-body.columns-2 #postbox-container-1, #poststuff #post-body.columns-2 #side-sortables {
-    width: 260px;
-}
-#post-body #side-sortables > div:before {
-    background-color: @bodycolor;
-    bottom: -40px;
-    content: "";
-    display: block;
-    left: -20px;
-    position: absolute;
-    top: 0;
-    width: 1px;
+.block-editor-block-list__insertion-point-inserter .block-editor-inserter__toggle {
+    border: none;
+    color: @primarycolor;
+    padding-bottom: 0;
+
+    &:focus, &:hover {
+        border: none;
+    }
 }
 
-#wp-content-wrap {
-    overflow: hidden;
+// folded
+
+@media (min-width: 960px) {
+    body.auto-fold .edit-post-header {
+        left: @sidebarwidth;
+    }
+}
+
+@media (min-width: 782px) {
+    body.auto-fold .edit-post-layout__content {
+        margin-left: @sidebarwidth;
+    }
 }
