add Artemis to a very new high level with a better Zeus core integration and text domain loader

--- a/src/less/core/02.common.buttons.less
+++ b/src/less/core/02.common.buttons.less
@@ -11,9 +11,11 @@
     color: @buttoncolor;
     font-size: @buttonfontsize;
     padding: @buttonpadding;
+    position: relative;
     text-shadow: @buttontextshadow;
     text-transform: @buttontexttransform;
     vertical-align: middle;
+    z-index: 1;
 
     -webkit-transition: @buttontransition;
     -moz-transition: @buttontransition;
