--- a/src/less/core/60.theme.less
+++ b/src/less/core/60.theme.less
@@ -42,3 +42,15 @@
         text-decoration: none;
     }
 }
+
+// search form
+
+.themes-php .search-form {
+    display: inline-block;
+    margin-left: 20px;
+    vertical-align: middle;
+
+    .wp-filter-search {
+        left: 0;
+    }
+}
