--- a/src/less/core/02.common.links.less
+++ b/src/less/core/02.common.links.less
@@ -1,4 +1,4 @@
-/*! 02.global.links */
+/*! 02.common.links */
 
 .wp-core-ui .button-link,
 .components-button.is-link,
@@ -15,6 +15,7 @@ a {
     &:focus, &:hover {
         background-color: transparent;
         border: none;
+        box-shadow: none;
         color: @linkhovercolor;
         outline: none;
         text-decoration: @linkhovertextdecoration;
