--- a/src/less/core/10.adminbar.less
+++ b/src/less/core/10.adminbar.less
@@ -6,7 +6,9 @@
     background-color: @adminbarbackgroundcolor;
     box-sizing: border-box;
     height: @adminbarheight;
-    padding-left: @sidebarwidth;
+    left: @sidebarwidth;
+    right: 0;
+    width: auto;
 
     * {
         line-height: @adminbarheight;
@@ -63,11 +65,11 @@
 // folded admin bar
 
 .folded #wpadminbar {
-    padding-left: 36px;
+    left: 36px;
 }
 
 @media (max-width: 960px) {
     body.auto-fold #wpadminbar {
-        padding-left: 36px;
+        left: 36px;
     }
 }
