--- a/src/less/core/12.adminmenu.less
+++ b/src/less/core/12.adminmenu.less
@@ -35,8 +35,11 @@ ul#adminmenu {
         margin: 0 0 @adminbarheight;
         text-align: center;
         width: 100%;
+
         -webkit-transition: all .1s linear;
+        -moz-transition: all .1s linear;
         transition: all .1s linear;
+
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
     }
@@ -56,7 +59,6 @@ ul#adminmenu {
 
         a {
             color: @sidebarcolor;
-            //padding: 5px 2px !important;
 
             &:after {
                 display: none;
