--- a/src/less/core/02.common.inputs.less
+++ b/src/less/core/02.common.inputs.less
@@ -37,6 +37,7 @@
         border: @inputborder;
         border-radius: @inputborderradius;
         box-shadow: @inputboxshadow;
+        caret-color: @inputcolor;
         color: @inputcolor;
         font-size: @inputfontsize;
         outline: none;
