--- a/src/less/core/25.navs.less
+++ b/src/less/core/25.navs.less
@@ -21,7 +21,7 @@
         &:hover {
             background-color: transparent;
             border-bottom: 1px solid @buttonsecondarybackgroundcolor;
-            color: @buttonsecondarybackgroundcolor;
+            color: @linkhovercolor;
             text-decoration: @linkhovertextdecoration;
         }
     }
