--- a/src/less/core/80.auth.less
+++ b/src/less/core/80.auth.less
@@ -2,13 +2,13 @@
 
 // flog
 
-#wp-auth-check-wrap #wp-auth-check-bg {
+#wpwrap #wp-auth-check-wrap #wp-auth-check-bg {
     background-color: @sidebarbackgroundcolor;
 }
 
 // box
 
-#wp-auth-check-wrap {
+#wpwrap #wp-auth-check-wrap {
     #wp-auth-check-form iframe {
         height: 100%;
     }
