update table title background-color

--- a/src/less/core/30.tables.less
+++ b/src/less/core/30.tables.less
@@ -29,7 +29,7 @@ p.popular-tags,
 
 table.widefat thead tr,
 table.widefat tfoot tr {
-    background-color: fade(@boxbackgroundcolor, 50%);
+    background-color: @tabletitlebackgroundcolor;
 
     th, td, th a, td a {
         color: @tabletitlecolor;
