update widgets background-color

--- a/src/less/core/70.widget.less
+++ b/src/less/core/70.widget.less
@@ -1,7 +1,7 @@
 /*! 70.widget */
 
 .widgets-holder-wrap {
-    background-color: fade(@boxbackgroundcolor, 50%);
+    background-color: @widgetbackgroundcolor;
     border: @boxborder;
     border-radius: @boxborderradius;
     box-shadow: @boxboxshadow;
